syntax = "proto3";
package model;
option go_package = "../model";

import "google/protobuf/timestamp.proto";

message Segment {
  string biz_id = 1;
  int64 max_id = 2;
  int32 step = 3;
  google.protobuf.Timestamp create_at = 4;
  google.protobuf.Timestamp update_at = 5;
}